# bnp

./: .gitignore  CMakeLists.txt  README.md
bnp/: CMakeLists.txt
bnp/app/editor/: CMakeLists.txt  main.cpp
bnp/resources/: palette.aseprite
bnp/resources/concept/: cloakaed_figure.aseprite  cloaked_figure.aseprite  dark_forest.aseprite  desert_skyline.aseprite  foreground_rocks.aseprite  grasslands.aseprite  mystic_grass.aseprite
bnp/resources/levels/: test_level.aseprite  test_level.json
bnp/resources/scripts/: bee_prefab.lua  behavior_nest_prefab.lua  flower_01_prefab.lua  log_test.lua  queen_bee_prefab.lua  toad_prefab.lua  water_prefab.lua
bnp/resources/shaders/: fragment_shader.glsl  galaxy_fragment_shader.glsl  galaxy_map_dot_fragment_shader.glsl  galaxy_map_dot_vertex_shader.glsl  planet_fragment_shader.glsl  quad_fragment_shader.glsl  quad_vertex_shader.glsl  sprite_fragment_shader.glsl  system_orbit_fragment_shader.glsl  vertex_shader.glsl  water2d_fragment_shader.glsl  water2d_vertex_shader.glsl  wireframe_fragment_shader.glsl  wireframe_vertex_shader.glsl
bnp/resources/sprites/: grass_01.aseprite  squirrel.aseprite
bnp/resources/sprites/arch_01/: arch_01.aseprite  arch_01.json  arch_01_colorful.aseprite
bnp/resources/sprites/background_sky/: background_sky.aseprite
bnp/resources/sprites/bee/: bee.aseprite  bee.json
bnp/resources/sprites/bot/: bot.aseprite
bnp/resources/sprites/bush_01/: bush_01.aseprite  bush_01.json
bnp/resources/sprites/bush_blue_01/: bush_blue_01.aseprite  bush_blue_01.json
bnp/resources/sprites/butterfly_red/: butterfly_red.aseprite  butterfly_red.json
bnp/resources/sprites/butterfly_yellow/: butterfly_yellow.aseprite  butterfly_yellow.json
bnp/resources/sprites/cloaked_figure_black/: cloaked_figure_black.aseprite  cloaked_figure_black.json
bnp/resources/sprites/flower_01/: flower_01.aseprite  flower_01.json
bnp/resources/sprites/galaxy_map/galaxy_map_dot/: galaxy_map_dot.aseprite  galaxy_map_dot.json
bnp/resources/sprites/grass_01/: grass_01.aseprite  grass_01.json
bnp/resources/sprites/grass_blue_01/: grass_blue_01.aseprite  grass_blue_01.json
bnp/resources/sprites/grassy_dirt/: grassy_dirt.aseprite  grassy_dirt.json
bnp/resources/sprites/ground_dirt/: ground_dirt.aseprite
bnp/resources/sprites/lily_pad_01/: lily_pad_01.aseprite
bnp/resources/sprites/queen_bee/: bee.json  queen_bee.aseprite  queen_bee.json
bnp/resources/sprites/ship/: ship.aseprite  ship.json
bnp/resources/sprites/squirrel/: squirrel.aseprite  squirrel.json
bnp/resources/sprites/squirrel_eyes/: squirrel_eyes.aseprite  squirrel_eyes.json
bnp/resources/sprites/test_moss/: moss.aseprite
bnp/resources/sprites/toad/: toad.aseprite  toad.json
bnp/resources/sprites/ui/: glyphs.aseprite  play_button.aseprite  play_button.json
bnp/resources/sprites/ui/back_to_galaxy_map_button/: back_to_galaxy_map_button.aseprite  back_to_galaxy_map_button.json
bnp/src/: CMakeLists.txt
bnp/src/bnp/: CMakeLists.txt  components.h  engine.cpp  engine.h  marshaling.hpp  serializers.h
bnp/src/bnp/behaviors/: bee_behavior_planner.cpp  bee_behavior_planner.h
bnp/src/bnp/bindings/: README.md  node.cpp  node.h  physics.cpp  physics.h  sprite.cpp  sprite.h  transform.cpp  transform.h
bnp/src/bnp/components/: behavior.h  controllable.h  core_data.h  global.h  graphics.h  hierarchy.h  inventory.h  label.h  physics.h  reflection.h  script.h  state.h  transform.h  ui.h  world.h
bnp/src/bnp/components/behavior/: flow_field_2d.cpp
bnp/src/bnp/components/controllers/: platform_2d_controller.cpp  squirrel_controller.cpp
bnp/src/bnp/components/game/: extraction.h  maps.h  universe.h
bnp/src/bnp/controllers/: controller.cpp  controller.h
bnp/src/bnp/core/: logger.hpp  node.cpp  node.hpp  scene.cpp  scene.h  time_system.cpp  time_system.h  window.cpp  window.h
bnp/src/bnp/factories/: material_factory.cpp  material_factory.h  mesh_factory.cpp  mesh_factory.h  script_factory.cpp  script_factory.h  sprite_factory.cpp  sprite_factory.h  texture_factory.cpp  texture_factory.h
bnp/src/bnp/graphics/: framebuffer.cpp  framebuffer.h  material_factory.cpp  material_factory.h  mesh_factory.cpp  mesh_factory.h  renderer.cpp  renderer.h  sprite_factory.cpp  sprite_factory.h  texture_factory.cpp  texture_factory.h
bnp/src/bnp/helpers/: camera_helper.cpp  camera_helper.h  color_helper.hpp  constants.h  filesystem_helper.cpp  filesystem_helper.h  random_float_generator.hpp  ui_helper.cpp  ui_helper.h
bnp/src/bnp/managers/: archive_manager.cpp  archive_manager.h  behavior_manager.cpp  behavior_manager.h  camera_manager.cpp  camera_manager.h  controller_manager.cpp  controller_manager.h  hierarchy_manager.cpp  hierarchy_manager.h  motility_manager.cpp  motility_manager.h  physics_manager.cpp  physics_manager.h  planet_2d_manager.cpp  planet_2d_manager.h  render_manager.cpp  render_manager.h  resource_manager.cpp  resource_manager.h  sprite_animation_manager.cpp  sprite_animation_manager.h  ui_manager.cpp  ui_manager.h  water2d_manager.cpp  water2d_manager.h  water_2d_manager.cpp  water_2d_manager.h  world2d_manager.cpp  world_2d_manager.cpp  world_2d_manager.h
bnp/src/bnp/resources/: allocator.hpp  resource_archive.hpp  scene_archive.hpp
bnp/src/bnp/serializers/: glm.hpp  graphics.hpp  hierarchy.hpp  node.hpp  registry.hpp  scene.hpp  transform.hpp  world.hpp
bnp/src/bnp/ui/: component_editor.hpp  file_browser.cpp  file_browser.h  node_inspector.cpp  node_inspector.h  render_manager_inspector.cpp  render_manager_inspector.h  scene_inspector.cpp  scene_inspector.h
bnp/tests/: CMakeLists.txt  archive_manager.test.cpp  entt.test.cpp  entt_test.cpp  node.test.cpp  node_test.cpp  resource_archive.test.cpp  resource_manager.test.cpp  scene.test.cpp  serializers.test.cpp  serializers_test.cpp  window.cpp
(+81 files in other folders)
